# linear-regression-scratch

./: README.md  pyproject.toml
src/core/: matrix.py
src/linlag/: matrix.py
src/loss/: losses.py
tests/: test_matrix.py  test_model.py
